fixed misalignment

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
   padding: 0;
 }
 
-html {
+body {
   box-sizing: border-box;
   /*fix difference sizing*/
   scroll-behavior: smooth;
@@ -15,7 +15,7 @@ html {
 
 /*welcoming section*/
 .welcoming {
-  width: 100%;
+  width: 100vw;
   height: 100vh;
   /*100 viewpoint height*/
   display: flex;
